# nrf52dk_blink

./: CMakeLists.txt
src/: main.c
tools/cmake/: armgcc.cmake  nrf52sdk.cmake
